<resources>
    <string name="app_name">BookSalesManagement</string>
    <string name="title_activity_bottom_navigation_view">BottomNavigationViewActivity</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_shopping_cart">购物车</string>

    <string name="tony_green">用户名</string>
    <string name="tonygreendev_gmail_com">邮箱</string>
    <string name="register_activity">注册</string>
    <string name="username">用户名</string>
    <string name="input_username">请输入用户名</string>
    <string name="register">注册</string>
    <string name="userpassword">密码</string>
    <string name="input_userpassword">请输入密码</string>
    <string name="register_userpwdagain">确认密码</string>
    <string name="input_userpwdagain">请再次输入密码</string>
    <string name="input_verificationcode">请输入验证码</string>
    <string name="VerificationCode">获取验证码</string>
    <string name="login_activity">登录</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register_managerVerifyCode">权限密码</string>
    <string name="input_managerVerifyCode">请输入注册管理员权限密码</string>
    <string name="title_shopping_order">订单</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>